AUTOMAKE_OPTIONS = foreign
AM_MAKEFLAGS = --no-print-directory

ACLOCAL_AMFLAGS = -Im4

lib_LTLIBRARIES = libfdt.la

include_HEADERS = libfdt.h libfdt_env.h fdt.h

libfdt_la_SOURCES = \
	fdt_addresses.c \
	fdt.c \
	fdt_empty_tree.c \
	fdt.h \
	fdt_overlay.c \
	fdt_ro.c \
	fdt_rw.c \
	fdt_strerror.c \
	fdt_sw.c \
	fdt_wip.c \
	libfdt_env.h \
	libfdt.h \
	libfdt_internal.h
